--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@
 LANGCHAIN_API_KEY="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"
 GROQ_API_KEY="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"
 LANGCHAIN_PROJECT="try"
+PORT = 8000
 '''
